feat KeyResultApiController::registerKeyResult 구현 & 테스트 통과